updated cell output

--- a/13_assignment_python.ipynb
+++ b/13_assignment_python.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "42461467",
    "metadata": {},
    "outputs": [],
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "6ae84c19",
    "metadata": {},
    "outputs": [],
@@ -112,19 +112,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "12addb76",
    "metadata": {},
    "outputs": [],
    "source": [
     "dict_key_value = {}\n",
-    "# write code here:\n",
-    "\n"
+    "# write code here:\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "c49ea64a",
    "metadata": {},
    "outputs": [
@@ -132,7 +131,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Ten': 30, 'Twenty': 30, 'Thirty': 30}\n"
+      "{'Ten': 10, 'Twenty': 20, 'Thirty': 30}\n"
      ]
     }
    ],
